--- a/hugo.yaml
+++ b/hugo.yaml
@@ -41,6 +41,17 @@ params:
       # index page by: content | summary | heading | title
       index: content
 
+  comments:
+    enable: true
+    type: giscus
+
+    giscus:
+      repo: "TrainedPro/trainedpro.github.io"
+      repoId: "R_kgDON06cHQ"
+      category: "blog"
+      categoryId: "DIC_kwDON06cHc4CniCP"
+
+
   dateFormat: "January, 2006"
 
 enableInlineShortcodes: true
