--- a/hugo.yaml
+++ b/hugo.yaml
@@ -32,7 +32,7 @@ params:
     displayToggle: true
   page:
     # full (100%), wide (90rem), normal (1280px)
-    width: normal
+    width: wide
   search:
     enable: true
     type: flexsearch
